# jupyter-guacamole

./: README.md  docker-compose.yml  z2jh-config.yaml
.github/workflows/: build.yml
compose/: README.md  docker-compose.yml
compose/hub/: Dockerfile  guacamole_handler.py  jupyterhub_config.py
compose/hub/guacamole_handler/: error.html  guacamole_handler.py  index.html  page.html
compose/ubuntu-mate-vnc-singleuser/: Dockerfile
compose/ubuntu-mate-vnc-singleuser/static_redirector/: README.md  pyproject.toml
compose/ubuntu-mate-vnc-singleuser/static_redirector/etc/jupyter/jupyter_server_config.d/: static_redirector.json
compose/ubuntu-mate-vnc-singleuser/static_redirector/static_redirector/: __init__.py  application.py  handlers.py
compose/ubuntu-mate-vnc-singleuser/static_redirector/static_redirector/templates/: index.html  page.html
docker-guacamole/: Dockerfile  guacamole.properties  logback.xml  logging.properties  start.sh  supervisord.conf
docker-jhproxy/: Dockerfile  start.sh
docker-ubuntu-mate/: Dockerfile  start-mate.sh  start.sh
jupyter-guacamole/: Dockerfile  start.sh
ubuntu-mate-vnc/: Dockerfile  environment.yml  jupyterlab.desktop  start.sh
